# x9-notification

./: .gitignore  CMakeLists.txt  README.md
cmake/vala/: ParseArguments.cmake  ValaVersion.cmake
data/schema/: com.diegorubin.x9-notification.gschema.xml  com.diegorubin.x9-notification.xml
src/: CMakeLists.txt  librabbitmq.vapi  queue_consumer.vala  x9-notification.vala  x9-settings.vala
src/views/: window_main.vala
